--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "utils/vars";
 @import "utils/mixins";
+@import "components/mobile-menu";
 @import "components/header.footer";
 @import "components/logo";
 @import "components/hero";
