--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,4 +1,5 @@
 .about {
+  display: none;
   padding: 100px 0;
   &__tile {
     position: relative;
@@ -16,5 +17,11 @@
     text-transform: uppercase;
     color: getColor("brandAccent");
     transform: translateY(200%);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about {
+    display: flex;
   }
 }
