--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -6,69 +6,85 @@
   min-height: 796px;
   padding: 48px 40px;
   background-color: getColor("brandAccent");
-  z-index: 999;
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @extend %flex;
+  flex-direction: column;
+  justify-content: space-between;
+  &__close-btn {
+    @extend %positionAb;
+    top: 10px;
+    right: 15px;
+    border: none;
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+  }
+  &__sign {
+    @extend %positionAb;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    &:hover,
+    &:focus {
+      fill: getColor("brand");
+    }
+  }
+  &__navigation {
+    flex-direction: column;
+    @extend %flex;
+    gap: 32px;
+  }
+  &__contact-info {
+    flex-direction: column;
+    @extend %flex;
+    gap: 38px;
+  }
+  &__socials {
+    @extend %flex;
+    margin-top: 58px;
+  }
+  &__social {
+    color: getColor("brand");
+    font-size: 18px;
+    &:nth-child(-n + 3) {
+      padding-right: 10px;
+      border-right: 1px solid getColor("backdropInputBorder");
+    }
+    &:nth-last-child(-n + 3) {
+      padding-left: 10px;
+    }
+  }
+  &.is-open {
+    transform: translateX(0);
+  }
 }
-
-.menu .link {
-  padding: 10px;
-  color: inherit;
-  text-decoration: none;
+@media (min-width: 768px) {
+  .menu {
+    display: none;
+  }
 }
-
-.menu .link:hover,
-.menu .link:focus {
-  text-decoration: underline;
-}
-
 .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
   min-height: 40px;
   min-width: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
   margin: 0;
   padding: 0;
   background-color: transparent;
   cursor: pointer;
   border: none;
-  border-radius: 50%;
   outline: none;
-}
-
-@media (min-width: 768px) {
-  .menu-toggle {
-    display: none;
+  &:hover,
+  &:focus {
+    fill: getColor("brand");
   }
 }
 
-.menu-toggle:hover,
-.menu-toggle:focus {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.menu-container.is-open {
-  transform: translateX(0);
-}
-
-.menu-container .menu-toggle {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  color: #fff;
-}
-
-.mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.mobile-menu .link {
-  display: block;
-  padding: 10px;
-  color: #fff;
-  text-decoration: none;
+@media screen and (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
 }
