--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,9 +1,5 @@
 .team {
   background-color: getColor("sectionBg");
-  &__list {
-    @include list(30px, 0, 0, 1px, 0);
-    @extend %flex;
-  }
   &__figure {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 1px 2px rgba(0, 0, 0, 0.2);
@@ -20,5 +16,29 @@
     color: getColor("text");
     text-transform: none;
     margin-bottom: 10px;
+  }
+  &__list {
+    align-self: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    background-color: getColor("sectionBg");
+    &__figure {
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 2px rgba(0, 0, 0, 0.2);
+      border-radius: 0 0 4px 4px;
+    }
+    &__figcaption {
+      padding: 30px 32px;
+      background-color: getColor("brandAccent");
+      border-radius: 0 0 4px 4px;
+    }
+    &__heading {
+      color: getColor("text");
+      text-transform: none;
+      margin-bottom: 10px;
+    }
   }
 }
