--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -14,7 +14,9 @@
   top: 0;
   width: 100%;
   height: 100%;
-  @extend .clients-list__wrapper;
+  @extend %flex;
+  @extend %alignCenter;
+  @extend %justifyCenter;
   background-color: getColor(backdropBg);
   &__modal {
     position: relative;
