--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,22 +1,36 @@
 .clients-list {
-  @include list(30px, 0, 0, 0, 0);
-  @extend %flex;
   color: getColor("socialIconBg");
+  column-count: 2;
+  column-gap: 30px;
+  @extend %center;
   &__item {
+    @extend %flex;
+    @extend %alignCenter;
+    @extend %justifyCenter;
     @include border(currentColor, 4px);
     width: 170px;
     height: 92px;
     cursor: pointer;
-    @extend .clients-list__wrapper;
     @extend %transition;
     &:hover,
     &:focus {
       color: getColor("brand");
     }
+    &:nth-child(-n + 5) {
+      margin-bottom: 30px;
+    }
   }
-  &__wrapper {
-    @extend %flex;
-    @extend %alignCenter;
-    @extend %justifyCenter;
+}
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    &__item {
+      width: 170px;
+      height: 92px;
+      cursor: pointer;
+      &:hover,
+      &:focus {
+        color: getColor("brand");
+      }
+    }
   }
 }
