--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,7 +5,6 @@
       getColor("headerBg")
     ),
     url(../images/Header_image_mobile.jpg);
-  max-width: 768px;
   background-size: cover;
   @extend %center;
   &__container {
@@ -29,14 +28,9 @@
   }
   &__tile {
     background-color: getColor("sectionBg");
-    width: calc(100% - 30px);
-    max-height: 120px;
     padding: 25px 0;
     @extend %flex;
     @extend %justifyCenter;
-  }
-  &__figcaption {
-    width: calc(100% - 30px);
   }
   &__heading {
     font-weight: 700;
@@ -45,6 +39,14 @@
     margin-top: 30px;
   }
 }
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/Header_image_mobile@2x.jpg);
+  }
+}
+
 @media sreen and (min-width: 1200px) {
   .hero {
     background-image: linear-gradient(
@@ -53,7 +55,6 @@
         getColor("headerBg")
       ),
       url(../images/header_image.jpg);
-    max-width: 1600px;
     &__tile {
       max-width: 270px;
       padding: 25px 100px;
