--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,7 +2,6 @@
   @extend %FontRaleway;
   color: getColor("logo");
   @include font(700, 26px, 1, 0.03em);
-  margin-right: 94px;
   text-decoration: none;
   &__accent {
     color: getColor("brand");
@@ -10,5 +9,10 @@
   &__footer {
     color: getColor("brandAccent");
     text-decoration: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    margin-right: 94px;
   }
 }
