--- a/sass/main.scss
+++ b/sass/main.scss
@@ -72,7 +72,7 @@ figure {
       text-transform: uppercase;
       font-weight: 700;
       color: getColor("brandAccent");
-      margin-bottom: 20px;
+      margin: 12px 0 20px 0;
     }
     &__overly {
       width: 301px;
@@ -82,10 +82,8 @@ figure {
 }
 
 .container {
-  max-width: 480px;
+  max-width: calc(100vw - 30px);
   @extend %center;
-  @extend %alignCenter;
-  @extend %justifyCenter;
 }
 .section {
   padding: 60px 15px;
@@ -139,7 +137,7 @@ figure {
 
 @media screen and (min-width: 1200px) {
   .container {
-    max-width: 1600px;
+    max-width: 1200px;
   }
   .section {
     padding: 94px 0;
@@ -233,11 +231,10 @@ figure {
       color: getColor("text");
     }
     &--mail {
-      font-size: 32px;
+      font-size: calc(100vw / 15);
       color: getColor("brand");
     }
     &--tel {
-      font-size: 24px;
       color: getColor("paragraph");
     }
   }
