--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  display: none;
+  display: block;
   padding: 100px 0;
   &__tile {
     position: relative;
@@ -20,8 +20,8 @@
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 1200px) {
   .about {
-    display: flex;
+    display: none;
   }
 }
