--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -20,8 +20,8 @@
   background-color: getColor(backdropBg);
   &__modal {
     position: relative;
-    width: 528px;
-    min-height: 581px;
+    max-width: 450px;
+    min-height: 609px;
     padding: 45px 40px 35px;
     border-radius: 4px;
     background-color: getColor(brandAccent);
@@ -144,5 +144,14 @@
     left: 50%;
     font-size: 30px;
     transform: translate(-50%, -50%);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .backdrop {
+    &__modal {
+      width: 528px;
+      min-height: 581px;
+    }
   }
 }
