--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,11 +1,11 @@
-.menu {
-  display: none;
+.menu-container {
   position: fixed;
   top: 0;
   left: 0;
-  min-width: 480px;
-  min-height: 796px;
-  padding: 48px 40px;
+  width: 100vw;
+  height: 100vh;
+  font-size: calc(100vw / 20);
+  padding: 2em 1.66em;
   background-color: getColor("brandAccent");
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -48,24 +48,20 @@
   }
   &__social {
     color: getColor("brand");
-    font-size: 18px;
+    font-size: 0.75em;
     &:nth-child(-n + 3) {
-      padding-right: 10px;
+      padding-right: 0.42em;
       border-right: 1px solid getColor("backdropInputBorder");
     }
     &:nth-last-child(-n + 3) {
-      padding-left: 10px;
+      padding-left: 0.42em;
     }
   }
   &.is-open {
     transform: translateX(0);
   }
 }
-@media (min-width: 768px) {
-  .menu {
-    display: none;
-  }
-}
+
 .menu-toggle {
   position: absolute;
   top: 16px;
