--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -20,28 +20,33 @@
     text-transform: none;
     margin-bottom: 10px;
   }
-  &__list {
-    align-self: center;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .team {
+    &__figure {
+      width: 354px;
+    }
+    &__list {
+      max-width: calc(768px - 30px);
+      flex-wrap: wrap;
+      margin: 0 auto;
+    }
+  }
+}
+@media screen and (min-width: 768px) {
+  .team {
+    &__list {
+      display: flex;
+      gap: 30px;
+    }
   }
 }
 
 @media screen and (min-width: 1200px) {
   .team {
-    background-color: getColor("sectionBg");
     &__figure {
-      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-        0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 2px rgba(0, 0, 0, 0.2);
-      border-radius: 0 0 4px 4px;
-    }
-    &__figcaption {
-      padding: 30px 32px;
-      background-color: getColor("brandAccent");
-      border-radius: 0 0 4px 4px;
-    }
-    &__heading {
-      color: getColor("text");
-      text-transform: none;
-      margin-bottom: 10px;
+      width: 270px;
     }
   }
 }
