--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -33,6 +33,9 @@ $colors: (
 %transition {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+%transitionColor {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 %center {
   margin: 0 auto;
 }
